# banner-scheduling

./: .env  Cargo.toml
data/: classes.db
japan/: test.json
migrations/: 001_create_tables.sql
migrations/2024-11-20-161259_classes/: down.sql  up.sql
src/: banner.rs  data.rs  main.rs  models.rs  schema.rs  ui.rs
src/banner/: adapter.rs  mod.rs  scraper.rs
src/db/: models.rs  schema.rs
