[package]
name = "schedule_course"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
eframe = "0.29.1"
egui = "0.29.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
